deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helsesjekk-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helsesjekk-bot
  template:
    metadata:
      labels:
        app: helsesjekk-bot
    spec:
      containers:
      - image: ghcr.io/politiet/helsesjekk-bot:latest
        name: helsesjekk-bot
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/internal/is_ready
            port: 80
          failureThreshold: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/internal/is_alive
            port: 80
          failureThreshold: 0
          periodSeconds: 30
        resources:
          limits:
            cpu: "50m"
            memory: "50Mi"
          requests:
            cpu: "10m"
            memory: "10Mi"

      imagePullSecrets:
        - name: githubkey
