deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helsesjekk-bot-service
  labels:
    app: helsesjekk-bot-frontend

spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
