deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helsesjekk-bot-ingress
  labels:
    app: helsesjekk-bot-frontend
spec:
  rules:
    - host: helsesjekk-bot.bks-prod.politiet.no
      http:
        paths:
          - backend:
              service:
                name: helsesjekk-bot-service
                port:
                  name: http
            path: /
            pathType: Prefix
